@@ -8,6 +8,10 @@
 	progress + device present sensors / events, system firmware
 	progress + state sensors / events.
 
+	* libfreeipmi/interpret: Support intepretation of management subsystem
+	health + transition severity sensors / events, management subsystem
+	health + device present sensors / events.
+
 2019-02-07 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/interpret: Support interpretation of drive slot +
